compiler-tests/src/test/data/diagnostic/suspend/MissingRuntimeCoroutinesForScopedBinding.ir.diag.txt
/MissingRuntimeCoroutinesForScopedBinding.kt:8:11: error: Scoped suspend bindings and `SuspendLazy` require the `dev.zacsweers.metro:runtime-coroutines` artifact. Add it to the compile and runtime classpath.
interface ExampleGraph {
          ^^^^^^^^^^^^
